# connectx

./: .gitignore  agent.py  connectx.py  network.py  setup.cfg  strategy.py  train.py  transition.py  utils.py
connectx/: board.py  evaluator.py  game.py  node.py  player.py
notebooks/: Untitled.ipynb  connectX_w-simulation-step.ipynb  node.ipynb
tests/: test_node.py
