[metadata]
name = connectx
author = Omar Sosa Rodriguez
author_email = omarfsosa@gmail.com
description = Short description goes here
version = attr: connectx.__version__
url = https://github.com//connectx
keywords =
  # science
  # machine learning
  # something else
license_files =
  LICENSE

[options]
python_requires = >= 3.10.0
packages = find:
zip_safe = False
install_requires =
  numpy
  # pandas
  # what else 
[options.extras_require]
test =
  pytest
  flake8
  # mypy
dev =
  black
  flake8
  isort
  nox
docs = 
  # sphinx maybe?
[options.entry_points]
console_scripts =
  # connectxrun = <mypkg>.module.filename:function_name
